--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "utils-generator",
   "version": "0.0.1",
-  "description": "utils generator qr, weather, to-do",
+  "description": "utils generator qr, weather, to-do, currency",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ."
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "currency-converter-lt": "^2.0.0",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
